--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "matter-js": "^0.18.0",
+    "node-sass": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-game-engine": "^1.2.0",
+    "react-native-sass-transformer": "^2.0.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
