--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.64.3",
     "react-native-game-engine": "^1.2.0",
     "react-native-sass-transformer": "^2.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
